# web-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  index.html.tmpl  stack.yaml  web-template.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs  ServantApp.hs
src/Web/: Template.hs
src/Web/Template/: Except.hs  Log.hs  Servant.hs  Server.hs  Types.hs  Wai.hs
src/Web/Template/Servant/: API.hs  Aeson.hs  Auth.hs  Error.hs  Swagger.hs
src/Web/Template/Servant/Error/: Instance.hs
