name:                web-template
version:             0.1.2.3
synopsis:            Web template
description:
            Web template includes:
            - check for authorization
            - check for version
            - common types
            - common exceptions
homepage:            https://github.com/biocad/web-template#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Template
                     , Web.Template.Wai

                     , Web.Template.Servant
                     , Web.Template.Servant.API
                     , Web.Template.Servant.Aeson
  other-modules:       Web.Template.Except
                     , Web.Template.Server
                     , Web.Template.Types
                     , Web.Template.Log

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bcd-log
                     , bytestring
                     , cookie
                     , data-default
                     , fast-logger
                     , http-types
                     , lens
                     , mtl
                     , scotty
                     , servant >= 0.17
                     , servant-server >= 0.17
                     , servant-swagger
                     , servant-swagger-ui
                     , swagger2
                     , text
                     , time
                     , wai
                     , wai-extra
                     , wai-logger
                     , warp
  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances

executable web-template
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , web-template
                     , text
                     , mtl
                     , scotty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/web-template
