name:                web-template
version:             0.1.3.16
synopsis:            Web template
description:
            Web template includes:
            - check for authorization
            - check for version
            - common types
            - common exceptions
homepage:            https://github.com/biocad/web-template#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Web
build-type:          Simple
extra-source-files:
    README.md
    index.html.tmpl
cabal-version:       >=1.10
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.7
   || ==9.4.5
   || ==9.6.2

library
  hs-source-dirs:      src
  exposed-modules:     Web.Template
                     , Web.Template.Wai

                     , Web.Template.Servant
                     , Web.Template.Servant.API
                     , Web.Template.Servant.Aeson
                     , Web.Template.Servant.Auth
                     , Web.Template.Servant.Error
                     , Web.Template.Servant.Error.Instance
                     , Web.Template.Servant.Swagger
  other-modules:       Web.Template.Except
                     , Web.Template.Server
                     , Web.Template.Types
                     , Web.Template.Log

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bcd-log
                     , bytestring
                     , cache
                     , clock
                     , cookie
                     , data-default
                     , fast-logger
                     , file-embed-lzma
                     , generic-override >= 0.2.0.0
                     , generic-override-aeson
                     , http-client
                     , http-client-tls
                     , http-types
                     , jose >= 0.8.4
                     , lens
                     , lens-aeson
                     , mtl
                     , network-uri
                     , openapi3 >= 3.2.0
                     , openid-connect >= 0.1.1
                     , resourcet
                     -- 0.20 has breaking changes
                     , scotty < 0.20
                     , servant >= 0.18
                     , servant-openapi3
                     , servant-server >= 0.18
                     , servant-swagger-ui >= 0.3.5.4.5.0
                     , servant-swagger-ui-core >= 0.3.5
                     , text
                     , time
                     , time
                     , vault
                     , wai
                     , wai-extra
                     , wai-logger
                     , warp
  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances

executable web-template
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , web-template
                     , text
                     , mtl
                     , scotty
  default-language:    Haskell2010

executable web-template-servant
  hs-source-dirs:      app
  main-is:             ServantApp.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , aeson
                     , network-uri
                     , openapi3
                     , servant-openapi3
                     , servant-server
                     , servant-swagger-ui
                     , text
                     , wai
                     , warp
                     , web-template
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/web-template
